Refactor reply system (#142)
* make reply methods return Message object and reimplement keep components

* remove latest reply from runtime

* replace ephemeral boolean flag with ReplyConfig and introduce GlobalReplyConfig

* write unit tests for new ReplyConfig helper method and fix old unit tests

* simplify switch